# cfDNAlab

./: .gitignore  AGENTS.md  CHANGELOG  CHANGELOG.md  CITATION.cff  CLAUDE.md  CURRENT_STATE_REVIEW.md  Cargo.toml  LICENSE  README.md  RELEASED_COMMANDS_TEST_PLAN.md  RELEASE_READINESS_2026-04-19.md  RELEASE_READINESS_REPORT.md  TESTING_AND_API_GUIDELINES.md  build.rs  future_readme_notes.md
.AI/: api_boundaries.md  collaboration.md  fcoverage_plan_v2_review.md  fcoverage_refactor_analysis.md  fcoverage_refactor_review.md  scientific_code.md  testing.md  tmp_fcoverage_complexity_reduction_plan.md  writing_style.md
.AI/user/: prompt_library.md
.github/: CONTRIBUTING.md
.github/workflows/: code_cov.yml  conda_install.yml  docs.yml  downstream-zarr.yml  rust.yml  rust_all_features.yml  rust_no_cli_rendering.yml
downstream_tests/: README.md  requirements-python.txt
downstream_tests/R/: common.R  test_cfdnalab_r_package.R  test_end_motif_zarr_cran_zarr.R  test_end_motif_zarr_rarr.R  test_length_counts_data_table.R  test_midpoint_zarr_cran_zarr.R  test_midpoint_zarr_rarr.R
downstream_tests/python/: conftest.py  test_end_motif_zarr_cfdnalab_package.py  test_end_motif_zarr_dask.py  test_end_motif_zarr_python.py  test_end_motif_zarr_xarray.py  test_lengths_cfdnalab_package.py  test_lengths_tsv_python.py  test_midpoint_zarr_cfdnalab_package.py  test_midpoint_zarr_dask.py  test_midpoint_zarr_python.py  test_midpoint_zarr_xarray.py  test_ref_kmer_zarr_cfdnalab_package.py
downstream_tests/rust/: Cargo.toml  test_downstream_rust_loaders.rs
examples/: gen_cli_docs.rs
plans_and_specs/: CFDNA_OUTLIERS_REVIEW_2026-04-22.md  CFDNA_OUTLIERS_SPEC_2026-04-21.md  CFDNA_OUTLIERS_SYSTEM_SPEC_2026-04-23.md  COMMAND_RELEASE_AUDIT_SPEC_2026-03-03.md  ENDS_IMPLEMENTATION_SPEC_2026-03-28.md  FCOVERAGE_GROUPED_BED_PLAN_2026-04-20.md  FCOVERAGE_GROUPED_BED_SPEC_2026-04-20.md  FUTURE_OPTIMIZATIONS_SPEC_2026-04-18.md  GROUPED_BED_DISTRIBUTIONS_SPEC_2026-04-18.md  LENGTHS_LENGTH_BINS_PLAN_2026-05-01.md  NORMALIZE_BY_LENGTH_RESTORE_MEAN_PLAN_2026-04-22.md  NORMALIZE_BY_LENGTH_RESTORE_MEAN_REVIEW_2026-04-22.md  RELEASE_TODO.md  TILE_WINDOW_AND_FETCH_EXECUTION_WORKDOC_2026-04-01.md  TILE_WINDOW_AND_FETCH_RULES_SPEC_2026-04-01.md  TILE_WINDOW_AND_FETCH_TEST_SPEC_2026-04-01.md  TRACING_LOGGING_SPEC_2026-04-17.md  WEBSITE_DOCS_PLAN_2026-03-03.md  ends_code_review.md  fcoverage_accumulation_numerics_spec_2026-04-16.md  future_readme_notes.md  public_api_plan.md  scaling_factors_spec.md
plans_and_specs/command_pipelines/: bam-to-bam.md  fcoverage.md  ref-gc-bias.md
plans_and_specs/major_reviews/: 00_review_plan.md  00_shared_package_notes.md  01_fcoverage.md  02_midpoints.md  03_ends.md  04_lengths.md  05_ref_gc_bias.md  06_gc_bias.md  07_fragment_count_weights.md  08_coverage_weights.md  09_bam_to_bam.md  10_bam_to_frag.md  11_frag_to_bam.md  G-006_origin_aware_gc_prefixes_plan.md
py-cfdnalab/: CHANGELOG  CHANGELOG.md  LICENSE  README.md  pyproject.toml
py-cfdnalab/src/cfdnalab/: __init__.py  _helpers.py  ends.py  lengths.py  midpoints.py  ref_kmers.py  reference_correction.py
py-cfdnalab/tests/: test_ends.py  test_lengths.py  test_midpoints.py  test_package.py  test_ref_kmers.py  test_reference_correction.py  test_reference_correction_core.py
py_cfdnalab/: README.md  pyproject.toml
py_cfdnalab/src/cfdnalab/: __init__.py  ends.py  midpoints.py
py_cfdnalab/tests/: test_ends.py  test_midpoints.py  test_package.py
r-cfdnalab/: .Rbuildignore  .gitignore  DESCRIPTION  DEVELOPMENT.md  LICENSE  NAMESPACE  NEWS.md  README.md
r-cfdnalab/R/: cfdnalab-package.R  end_motifs.R  generics.R  helpers.R  lengths.R  midpoints.R  ref_kmers.R  reference_correction.R  zarr_helpers.R
r-cfdnalab/man/: all_motifs.Rd  assign_by.Rd  canonical.Rd  cf_open_zarr.Rd  cfdnalab-package.Rd  dense_corrected_counts_matrix.Rd  dense_counts_matrix.Rd  dense_counts_vector.Rd  dense_data_frame.Rd  dense_data_frame_for_group.Rd  dense_data_frame_for_motif.Rd  dense_data_frame_for_window.Rd  dense_frequencies_matrix.Rd  dense_frequencies_vector.Rd  end_motif_data_frame.Rd  group_idx.Rd  group_metadata.Rd  groups.Rd  has_motif.Rd  kmer_size.Rd  length_bin_idx.Rd  length_bins.Rd  length_counts_matrix.Rd  length_counts_vector.Rd  length_data_frame.Rd  midpoint_array.Rd  midpoint_data_frame.Rd  motif_axis_kind.Rd  motif_idx.Rd  motifs.Rd  orientation.Rd  positions.Rd  print.cfdnalab_end_motif_counts.Rd  print.cfdnalab_length_counts.Rd  print.cfdnalab_midpoint_profiles.Rd  print.cfdnalab_ref_kmer_frequencies.Rd  profile_array.Rd  profile_data_frame.Rd  read_end_motifs.Rd  (+18 more)
src/: background_reading_benchmarks.rs  cli_app.rs  cli_app_roundtrip_tests.rs  cli_app_tests.rs  cli_command.rs  cli_common.rs  command_run.rs  counters.rs  ends.rs  error.rs  fcoverage.rs  fragment_kmers.rs  gc.rs  lengths.rs  lib.rs  normalize_genome.rs  profile_groups.rs  refgc.rs
tests/: generate_downstream_midpoint_fixture.rs  generate_downstream_zarr_fixtures.rs  pos_kmer_viz.rs  test_bam_to_bam_command.rs  test_bam_to_frag.rs  test_base.rs  test_bed_loader.rs  test_blacklist_utils.rs  test_cli_command_rendering.rs  test_cli_command_rendering_no_cli.rs  test_cli_smoke.rs  test_coverage.rs  test_cross_command_artifact_matrix.rs  test_ends_command.rs  test_fcoverage_command.rs  test_frag_to_bam_command.rs  test_fragment.rs  test_fragment_iterator_indel.rs  test_fragment_kmers_command.rs  test_gc_bias.rs  test_gc_bias_streaming.rs  test_gc_bias_window_logic.rs  test_gc_bias_windows.rs  test_gc_smoothing.rs  test_gc_tag.rs  test_heatmap_inputs.rs  test_interpolation.rs  test_interval.rs  test_length_counting.rs  test_lengths_command.rs  test_logging_cli.rs  test_normalize_genome_command.rs  test_output_loader_error.rs  test_output_loaders_ends.rs  test_output_loaders_fcoverage.rs  test_output_loaders_lengths.rs  test_output_loaders_midpoints.rs  test_output_loaders_ref_kmers.rs  test_output_loaders_reference_correction.rs  test_parse_md_tags.rs  (+21 more)
website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+503 files in other folders)
