[package]
name = "cfdnalab"
version = "0.1.0"
edition = "2024"

[features]
default = []
cli = ["clap"]

[dependencies]
anyhow = "1.0.98"
arrayvec = "0.7.6"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.37", features = ["derive"], optional = true }
fxhash = "0.2.1"
indicatif = { version = "0.17.11", default-features = false, features = ["rayon", "unicode-width"] }
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
needletail = { version = "0.6.3", default-features = false, features = ["flate2", "zstd"] }
num-traits = "0.2.19"
num_cpus = "1.17.0"
rand = "0.9.1"
rayon = "1.10.0"
rust-htslib = "0.50.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
twobit = "0.2.1"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "cfdna"
path = "src/bin/cfdna.rs"
required-features = ["cli"]
