[project]
name = "cfdnalab"
version = "0.2.0"
description = "Python helpers for loading and interacting with cfDNAlab output files"
authors = [{name = "Ludvig", email = "mail@ludvigolsen.dk"}]
readme = "README.md"
license = "MIT"
keywords = [
    "fragmentomics",
    "cell-free-dna",
    "cfdna",
    "whole-genome-sequencing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "zarr>=3,<4",
    "zstandard",
]

[project.urls]
Repository = "https://github.com/BesenbacherLab/cfDNAlab/tree/main/py-cfdnalab"
Issues = "https://github.com/BesenbacherLab/cfDNAlab/issues"
Changelog = "https://github.com/BesenbacherLab/cfDNAlab/blob/main/py-cfdnalab/CHANGELOG"

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfdnalab"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src/cfdnalab",
]
