[project]
name = "cfdnalab"
version = "0.1.0"
description = "Python helpers for loading cfDNAlab output files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "zarr>=3",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
